# udacity-data-warehouse-s3-redshift

./: README.md  create_tables.py  dwh.cfg  etl.py  pyproject.toml  quality_checks.py  sql_queries.py
scripts/: create_cluster.py  delete_cluster.py
